--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
 # Python
 __pycache__/
 *.py[cod]
@@ -7,36 +12,45 @@ __pycache__/
 env/
 venv/
 ENV/
-*.egg-info/
-dist/
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
 # Node
 node_modules/
-npm-debug.log
-yarn-error.log
-.pnpm-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 
 # Build outputs
-frontend/dist/
-frontend/build/
+dist/
+build/
+*.log
 
-# Environment
-.env
-.env.local
-.env.*.local
-
-# IDE
+# IDEs
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# OS
-.DS_Store
-Thumbs.db
+# Environment variables
+.env
+.env.local
+.env.*.local
 
-# Logs
-*.log
-logs/
+# OS
+Thumbs.db
