--- a/.gitignore
+++ b/.gitignore
@@ -3,30 +3,12 @@
 .AppleDouble
 .LSOverride
 
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-venv/
-ENV/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+# Next.js
+.next/
+out/
+*.gz
+*.tsbuildinfo
+next-env.d.ts
 
 # Node
 node_modules/
@@ -50,7 +32,16 @@ build/
 # Environment variables
 .env
 .env.local
-.env.*.local
+.env.production.local
+.env.development.local
+.env.test.local
 
 # OS
 Thumbs.db
+
+# Testing
+coverage/
+.nyc_output/
+
+# Vercel
+.vercel
